--- a/Solution/AngularFront/ClientApp/app/components/calcproject/calcproject.component.less
+++ b/Solution/AngularFront/ClientApp/app/components/calcproject/calcproject.component.less
@@ -1,1 +1,11 @@
 ﻿/* Any custom CSS you would want goes here. */
+
+.BallOfFloof {
+    border-radius: 9001px;
+}
+
+.middle-kitty {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
