Added Chuck Testa

--- a/Solution/AngularFront/ClientApp/app/components/calcproject/calcproject.component.html
+++ b/Solution/AngularFront/ClientApp/app/components/calcproject/calcproject.component.html
@@ -1,6 +1,6 @@
 ﻿<!-- This is where you HTML and Angular bindings will be. -->
 <!-- We wanna show a kitty. desu -->
-
+chuck testa
 <div id="yeOldKittyFaces">
     <div (click)="CatAbuse()" >
         :3
